@@ -6,6 +6,7 @@
 
 	* Fixed bug #16280: Field size for "shortcut" is 3, although maxitems is 1
 	* Fixed bug #16279: Use class constants for pages:shortcut_mode in tbl_pages.php
+	* Reverted #16136: make it possible to really restrict to certain file extensions for filemounts
 
 2010-11-09  Ernesto Baschny  <ernst@cron-it.de>
 
